# openCL-homeworks

./: CMakeLists.txt  README.md
matrix_multiplication/: CMakeLists.txt  classic_multiplication.c  classic_multiplication.h  main.c  matrix_multiplication.cl  openCL_multiplication.c  openCL_multiplication.h  program.cl  utils.c  utils.h
prefix_sum/: CMakeLists.txt  classic_multiplication.c  classic_multiplication.h  classic_prefix_sum.c  classic_prefix_sum.h  main.c  openCL_prefix_sum.c  openCL_prefix_sum.h  prefix_sum.cl  utils.c
utils/: CMakeLists.txt  openCL_utils.c  openCL_utils.h  utils.c  utils.h
